# ldacs_crypto

./: .gitignore  CMakeLists.txt  README.md  export_rootkey.c  key_usage.c  root_key_prestore.c  test_keymanage.c
cmake/: LdacscryptoConfig.cmake  LdacscryptoConfig.cmake.in
config/: km.h.in
docs/: cnotes.txt  query.sql
docs/bak/: ForGuangDian.c  ForGuangDian.h  cmakefile_zou.txt  createtable_test.c  export_rootkey_test.c  main.c.bak  prestore_rootkey.c.bak  rootkey.txt  update_masterkey_test.c  update_sessionkey_test.c
docs/database/: basic_db_op.c  config_record.txt  copy.txt  db.sql  manipu_keystore.c  menipu_keystore.h
docs/piico/: Makefile  card_init.sh
docs/piico/docs/: login.txt
docs/piico/driver/: Makefile
docs/piico/driver/usb/: .Module.symvers.cmd  .modules.order.cmd  .piico_ccmu.ko.cmd  .piico_ccmu.mod.cmd  .piico_ccmu.mod.o.cmd  .piico_ccmu.o.cmd  .piico_mini.o.cmd  Makefile  modules.order  piico_ccmu.ko  piico_ccmu.mod  piico_ccmu.mod.c  piico_mini.c  piico_mini.h
docs/piico/examples/: Makefile  menu  menu.c  perf_random  perf_random.c  perf_sm14  perf_sm14.c  perf_sm2  perf_sm2.c  perf_sm3  perf_sm3.c  piicoToolWP  piicoToolWP.c  std_random  std_random.c  std_sm1  std_sm1.c  std_sm2  std_sm2.c  std_sm3  std_sm3.c  std_sm4  std_sm4.c
docs/piico/include/: api.h  piico_define.h
docs/schema/: preshare.txt
docs/sdf/: libsdf.h  sdf-algid.h  sdf-basetype.h  sdf-devinfo.h  sdf-err.h  sdf-exfunc.h  sdf-func.h  sdf-keytype.h
docs/sdfkmt/: sdfe-func.h  sdfe-type.h
docs/sh/: init.sh  km.sh  km_cmd_tool.txt
docs/test/: keystore.c  main.c  test_derive.c  test_encrypt.c  test_hash_time.c  test_hmac.c  test_key_generation.c  test_sm3_hmac.c  test_time_enc&dec.c  test_time_hmac.c
include/: cipher_util.h  database.h  key_manage.h  km.h  km_field.h  kmdb.h  ldacscrypto.h
keystore/: rootkey.txt
piico-import/: CMakeLists.txt  piico-import.c
src/: CMakeLists.txt  cipher_util.c  database.c  key_manage.c  kmdb.c
tests/: CMakeLists.txt  algo_test.c  asan_test.c  db_test.c  delete_keyvalue_test.c  enc_dec_2_test.c  enc_dec_test.c  generate_flowchart.py  gethandle_test.c  gkey_gen_exp_test.c  gkey_import_test.c  gkey_to_ccard_test.c  hex_conv_test.c  importk_with_kek_test.c  jx_gethandle_test.c  kcom_based_id_test.c  kcom_test.c  kderive_test.c  kderive_time_test.c  kdistribute_test.c  kenable_test.c  kestablish_as_test.c  kestablish_gs_test.c  kestablish_sgw_test.c  kestablish_test.c  key_distribute_test.c  keygen_test.c  kget_as_test.c  kget_gs_test.c  khandle_comp_test.c  kinstall_test.c  km_hmac_test.c  krevoke_test.c  krevoke_time_test.c  kup_packet_test.c  kupdate_2_test.c  kupdate_3_test.c  kupdate_test.c  newpkg_test.c  prehandle_test.c  (+21 more)
tests/bak/: kderive_test.c.bak  kestablish_test.bak(complex).c  rkey_export_test.c  run_assist.sh  sql_dyn_insert_test.c
tests/bak/crypto/: algo_test.c
tests/bak/km_kit/: get_handle_test.c  importk_with_kek_test.c  kcom_test.c  kderive_test.c.bak  kdistribute_test.c  kestablish_test.bak(complex).c  khandle_comp_test.c  kup_packet_test.c  kupdate_2_test.c  kupdate_3_test.c  prehandle_test.c  rkey_export_test.c  ryptocard_file_rw_test.c
tests/bak/kmdb/: db_test.c  query_for_update_test.c  query_id_test.c  query_kekhandle_test.c  query_key_test.c  query_keystate_test.c  query_keytype_test.c  query_owner_test.c  query_subid_test.c  sql_dyn_insert_test.c  sql_insert_test.c
tests/bak/manipu/: hex_conv_test.c
